// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros 1. client-side with skip option: 1. client-side with skip option 1`] = `


import { useSSRComputation } from "../lib/index.macro"
const skip = true;
const x = useSSRComputation("./a.ssr-computation", [], { skip, webpackChunkName: "custom-chunk-name" })
      

      ↓ ↓ ↓ ↓ ↓ ↓

function _dynamicImport_() {
  return import(
    /* webpackChunkName: "custom-chunk-name-ssr-computations" */ "./a.ssr-computation"
  );
}
import useSSRComputation_Client from "@popmenu/use-ssr-computation.runtime/lib/useSSRComputation_Client";
const skip = true;
const x = useSSRComputation_Client(
  _dynamicImport_,
  [],
  {
    skip,
  },
  "tests/a.ssr-computation",
);

`;

exports[`macros 1. server-side with skip option: 1. server-side with skip option 1`] = `


import { useSSRComputation } from "../lib/index.macro"
const skip = true;
const x = useSSRComputation("./a.ssr-computation", [], { skip, webpackChunkName: "custom-chunk-name" })
      

      ↓ ↓ ↓ ↓ ↓ ↓

import __a from "./a.ssr-computation";
import useSSRComputation_Server from "@popmenu/use-ssr-computation.runtime/lib/useSSRComputation_Server";
const skip = true;
const x = useSSRComputation_Server(
  __a,
  [],
  {
    skip,
  },
  "tests/a.ssr-computation",
);

`;

exports[`macros 2. client-side with serverSideOnly: 2. client-side with serverSideOnly 1`] = `


import { useSSRComputation } from "../lib/index.macro"
const skip = true;
const x = useSSRComputation("./a.ssr-computation", [], { serverSideOnly: true })
      

      ↓ ↓ ↓ ↓ ↓ ↓

const skip = true;
const x = null;

`;

exports[`macros 2. server-side with serverSideOnly: 2. server-side with serverSideOnly 1`] = `


import { useSSRComputation } from "../lib/index.macro"
const skip = true;
const x = useSSRComputation("./a.ssr-computation", [], { serverSideOnly: true })
      

      ↓ ↓ ↓ ↓ ↓ ↓

import __a from "./a.ssr-computation";
import useSSRComputation_Server from "@popmenu/use-ssr-computation.runtime/lib/useSSRComputation_Server";
const skip = true;
const x = (() => null)(
  useSSRComputation_Server(__a, [], {}, "tests/a.ssr-computation"),
);

`;
